# convnet

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compileProto.sh  create_lmdb  log  main
proto/: categoryList.proto  data.proto
res/: dictionary
src/: Data.cpp  Data.hpp  Datum.cpp  Datum.hpp  Db.cpp  Db.hpp  create_lmdb.cpp  main.cpp  utils.cpp  utils.hpp
src/proto/: data.pb.cc  data.pb.h
